--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 .externalNativeBuild
 /buildSrc/build
 /app/src/main/res/values/private_values.xml
+/app/src/debug/res/xml/network_security_config.xml
