Let's go for a ViewModel style
Introduce ViewModel as a way to keep data consistent.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,7 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
 
-        <activity android:name=".SplashActivity"/>
-
-        <activity android:name=".main.MainActivity">
-
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -27,6 +24,7 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".main.MainActivity"/>
         <activity android:name=".login.LoginActivity"/>
     </application>
 
